--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@capacitor/android": "4.3.0",
+    "@awesome-cordova-plugins/sqlite": "^5.45.0",
+    "@capacitor/android": "4.1.0",
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.1.2",
     "@capacitor/core": "4.3.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
-    "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/storage-angular": "^3.0.6",
+    "cordova-sqlite-storage": "^6.0.0",
     "ionicons": "^6.0.3",
+    "jsqr": "^1.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
