--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/sqlite": "^5.45.0",
+    "@capacitor-community/barcode-scanner": "^3.0.0",
     "@capacitor/android": "4.1.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/camera": "^4.1.2",
@@ -28,6 +29,7 @@
     "@capacitor/keyboard": "4.0.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
+    "angularx-qrcode": "^14.0.0",
     "cordova-sqlite-storage": "^6.0.0",
     "ionicons": "^6.0.3",
     "jsqr": "^1.4.0",
