--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/core": "^6.2.0",
     "@awesome-cordova-plugins/sqlite": "^5.46.0",
     "@capacitor-community/barcode-scanner": "^3.0.0",
     "@capacitor/android": "4.3.0",
@@ -27,11 +28,14 @@
     "@capacitor/core": "4.3.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
+    "@ionic-native/email-composer": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/storage-angular": "^3.0.6",
     "angularx-qrcode": "^14.0.0",
+    "cordova-plugin-email-composer": "^0.10.1",
     "cordova-sqlite-storage": "^6.0.0",
     "ionicons": "^6.0.3",
+    "jetifier": "^2.0.0",
     "jsqr": "^1.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
